--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@ layout: table_wrappers
       {% include nav.html %}
     </nav>
     <footer class="site-footer">
-	  <a href="https://www.hslu.ch/laes" target="_blank"><img src="https://github.com/hslu-ige-laes/lora-devices-ttn/raw/master/assets/images/hsluLogo.png" width="200" align="left" class="inline"></a>
+	  <a href="https://www.hslu.ch/laes" target="_blank"><img src="https://github.com/hslu-ige-laes/lora-devices-ttn/raw/master/assets/images/hsluLogo.png" width="200"></a>
 	  <hr>
       This site uses <a href="https://github.com/pmarsceill/just-the-docs">Just the Docs</a>, a documentation theme for Jekyll.
     </footer>
